packages/main/src/themes/MonthPicker.css
:host(:not([hidden])) {
	display: block;
}

:host {
	width: 100%;
	height: 100%;
}

.ui5-mp-root {
	box-sizing: border-box;
	padding: 2rem 0 1rem 0;
	display: flex;
	flex-direction: column;
	font-family: "72override", var(--sapFontFamily);
	font-size: var(--sapFontSize);
	justify-content: center;
	align-items: center;
}

.ui5-mp-item {
	display: flex;
	flex-direction: column;
	width: calc(33.333% - 0.125rem);
	height: var(--_ui5_month_picker_item_height);
	color: var(--sapButton_Lite_TextColor);
	background-color: var(--sapLegend_WorkingBackground);
	align-items: center;
	justify-content: center;
	margin: var(--_ui5_monthpicker_item_margin);
	box-sizing: border-box;
	-webkit-user-select: none;
	-moz-user-select: none;
	user-select: none;
	cursor: default;
	outline: none;
	position: relative;
	border: var(--_ui5_monthpicker_item_border);
	border-radius: var(--_ui5_monthpicker_item_border_radius);
}

.ui5-dp-monthsectext {
	font-size: 0.75rem;
	color: var(--sapNeutralElementColor);
}

.ui5-mp-item:hover {
	background-color: var(--sapList_Hover_Background);
}

.ui5-mp-item.ui5-mp-item--selected,
.ui5-mp-item.ui5-mp-item--selected .ui5-dp-monthsectext {
	box-shadow: var(--_ui5_monthpicker_item_selected_box_shadow);
	font-weight: var(--_ui5_monthpicker_item_selected_font_wieght);
	background-color: var(--_ui5_monthpicker_item_selected_background_color);
	color: var(--_ui5_monthpicker_item_selected_text_color);
}

.ui5-mp-item.ui5-mp-item--disabled {
	pointer-events: none;
	opacity: 0.5;
}

.ui5-mp-item.ui5-mp-item--selected:focus {
	background-color: var(--sapContent_Selected_Background);
}

.ui5-mp-item.ui5-mp-item--selected:focus::after {
	border-color: var(--_ui5_monthpicker_item_focus_after_border);
}

.ui5-mp-item.ui5-mp-item--selected:hover {
	background-color: var(--_ui5_monthpicker_item_selected_hover_color);
}

.ui5-mp-item:focus::after {
	content: "";
	position: absolute;
	border: var(--_ui5_button_focused_border);
	inset: 0;
	border-radius: var(--_ui5_monthpicker_item_focus_after_border_radius);
}

.ui5-mp-quarter {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 100%;
}

/* Switching to a two column layout */
:host([secondary-calendar-type="Persian"]:not([primary-calendar-type="Persian"])) .ui5-mp-root,
:host([secondary-calendar-type="Islamic"]:not([primary-calendar-type="Islamic"])) .ui5-mp-root {
	display: grid;
	padding: 1rem 0 1rem;
	grid-template-columns: repeat(2, 1fr);
	gap: var(--_ui5_monthpicker_item_margin);
}

:host([secondary-calendar-type="Persian"]:not([primary-calendar-type="Persian"])) .ui5-mp-item,
:host([secondary-calendar-type="Islamic"]:not([primary-calendar-type="Islamic"])) .ui5-mp-item {
	margin: 0;
	width: auto;
}

:host([secondary-calendar-type="Persian"]:not([primary-calendar-type="Persian"])) .ui5-mp-quarter,
:host([secondary-calendar-type="Islamic"]:not([primary-calendar-type="Islamic"])) .ui5-mp-quarter {
	width: 100%;
	display: contents;
}

